# nmt-with-attention

./: NMT in Jupyter.ipynb  README.md  pyproject.toml
nmt_with_attention/: config.py  infer.py  main.py
nmt_with_attention/data/: __init__.py  preprocessor.py  reader.py
nmt_with_attention/model/: __init__.py  attention.py  decoder.py  encoder.py  export_model.py  translator.py
nmt_with_attention/utils/: __init__.py  helper.py  plots.py  shape_check.py
tests/data/: test_preprocessor.py  test_reader.py  test_spa_eng.txt
tests/utils/: test_helper.py
